--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#7c3aed" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="ProgressMind" />
+    <meta name="apple-mobile-web-app-title" content="RoutineMind" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
-    <title>ProgressMind - Application de Développement Personnel</title>
+    <title>RoutineMind - Application de Développement Personnel</title>
   </head>
   <body>
     <div id="root"></div>
